--- a/Email-Server/html/template.html
+++ b/Email-Server/html/template.html
@@ -29,7 +29,8 @@
       background-color: #ecf0f1;
       padding: 20px;
       text-align: center;
-      color: #ffffff;
+      /*color: #ffffff;*/
+      color: #1c1c1c;
     }
 
     .header img {
@@ -113,7 +114,7 @@
     <tr>
       <td>
         <div class="header">
-          
+          <h1>Logo</h1>
         </div>
         <div class="content">
             {% block content %}{% endblock %}
